<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/padding_8"
    android:paddingLeft="@dimen/padding_15"
    android:paddingRight="@dimen/padding_15"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/delete_background"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="@dimen/padding_5"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_profile_image"
                android:layout_marginRight="@dimen/padding_20"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/default_profile_img"
                app:civ_border_color="#FF000000" />

            <TextView
                android:id="@+id/tv_requirement"
                android:lineSpacingExtra="3dp"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_toRightOf="@+id/img_profile_image"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_20"
                android:text="@string/requierment"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_marginTop="@dimen/padding_40"
                android:layout_toRightOf="@+id/img_profile_image"
                android:layout_width="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/text_18"
                android:text="@string/inprogress"
                android:layout_height="wrap_content" />


        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/padding_10"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_Subject"
                android:layout_width="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/text_18"
                android:text="@string/subject"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_subname"
                android:layout_marginLeft="@dimen/padding_8"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18"
                android:text="@string/salsa"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_expert_location"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_marginLeft="@dimen/padding_8"
                android:layout_width="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/text_18"
                android:text="@string/location1"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_place"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18"
                android:text="@string/Melbourn"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_fee_coaching"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_width="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/text_18"
                android:text="@string/coaching1"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_preference"
                android:layout_marginRight="@dimen/padding_10"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_marginLeft="@dimen/padding_8"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18"
                android:text="@string/home"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_contact"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_width="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/text_18"
                android:text="@string/contact"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_contactnum"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_marginLeft="@dimen/padding_8"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18"
                android:text="@string/number"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_complete"
            android:visibility="gone"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/padding_15"
            android:textStyle="normal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_15"
            android:background="@color/login_orange"
            android:text="@string/complete"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16" />

        <Button
            android:textColor="@color/white"
            android:id="@+id/btn_confirmed_rejected"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/padding_15"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/padding_10"
            android:background="@color/request_gray"
            android:singleLine="true"
            android:text="@string/accept" />

        <LinearLayout
            android:id="@+id/ll_joinbuttons"
            android:layout_marginTop="@dimen/padding_10"
            android:layout_marginLeft="@dimen/padding_20"
            android:layout_marginRight="@dimen/padding_20"
            android:layout_marginBottom="@dimen/padding_15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:textColor="@color/white"
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_marginRight="@dimen/padding_10"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/login_orange"
                android:singleLine="true"
                android:text="@string/confirm" />

            <Button
                android:textColor="@color/white"
                android:id="@+id/btn_reject"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/login_orange"
                android:singleLine="true"
                android:text="@string/reject" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>