<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

   android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/login_mainlayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/tv_expertlogo"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expertlogo"
            android:textSize="@dimen/text_35" />
        <TextView
            android:id="@+id/tv_expertlogo1"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/padding_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expertlogo1"
            android:textSize="@dimen/text_35" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_15"
        android:paddingRight="@dimen/padding_15">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/padding_35"
            android:layout_marginRight="@dimen/padding_35"
            android:background="@drawable/bottom_border"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="@dimen/padding_35"
            android:hint="@string/mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/padding_35"
            android:layout_marginRight="@dimen/padding_35"
            android:layout_marginTop="@dimen/padding_15"
            android:background="@drawable/bottom_border"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="@dimen/padding_35"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:textStyle="normal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_15"
            android:background="@color/login_orange"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_forgotpassword"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_15"
            android:text="@string/forgot"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <Button
            android:id="@+id/btnsign"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_20"
            android:background="@drawable/border_bg"
            android:text="@string/signup"
            android:textColor="@color/login_orange"
            android:textSize="@dimen/text_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/padding_15"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:background="@color/edit_gray" />

            <TextView
                android:id="@+id/tv_loginwith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_marginRight="@dimen/padding_10"
                android:text="@string/loginwith"
                android:textSize="@dimen/text_18" />

            <View
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:background="@color/edit_gray" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgFacebook"
            android:layout_gravity="center_horizontal"
            android:layout_width="58dp"
            android:layout_marginBottom="@dimen/padding_5"
            android:layout_height="58dp"
            android:layout_marginTop="@dimen/padding_20"
            android:src="@drawable/login_facebook_icon" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>
