<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="30dp"
        android:id="@+id/imgcancel"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/padding_10"
        android:src="@drawable/cross_btn"
        android:layout_height="30dp" />
<TextView
    android:id="@+id/tv_signupas"
    android:layout_width="wrap_content"
    android:text="@string/signupas"
    android:textSize="@dimen/text_20"
    android:layout_marginTop="@dimen/padding_20"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="@dimen/text_20"
        android:id="@+id/teachersign"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/padding_25"
        android:layout_marginRight="@dimen/padding_25"
        android:layout_marginTop="@dimen/padding_20"
        android:background="@color/login_orange"
        android:text="@string/asteacher"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_20"
        android:layout_marginLeft="@dimen/padding_25"
        android:id="@+id/studentsign"
        android:layout_marginRight="@dimen/padding_25"
        android:layout_marginTop="@dimen/padding_20"
        android:background="@color/login_orange"
        android:layout_marginBottom="50dp"
        android:text="@string/asstudent"/>
</LinearLayout>